deploy2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planning-app
  namespace: planning-app
spec:
  ingressClassName: nginx
  rules:
    - host: localhost.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planning-app
                port:
                  number: 80
